Import of MSERGEANT/XML-LibXSLT-1.00 from CPAN.
gitpan-cpan-distribution: XML-LibXSLT
gitpan-cpan-version:      1.00
gitpan-cpan-path:         MSERGEANT/XML-LibXSLT-1.00.tar.gz
gitpan-cpan-author:       MSERGEANT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension XML::LibXSLT.
 
+1.00
+    - More segfault fixes
+    - Benchmark updates    
+
 0.99_01
     - More segfault fixes
 
