--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for Perl extension XML::LibXSLT.
 
+1.04
+    - Fixed media_type method
+
+1.03
+    - Added output_encoding and media_type methods
+
+1.02
+    - Fixed Makefile.PL to work with libxslt 0.10
+
 1.01
     - Removed hack where we set dom->standalone = 42 to prevent
       XML::LibXML from garbage collecting
