Import of SHLOMIF/XML-LibXSLT-1.71 from CPAN.
gitpan-cpan-distribution: XML-LibXSLT
gitpan-cpan-version:      1.71
gitpan-cpan-path:         SHLOMIF/XML-LibXSLT-1.71.tar.gz
gitpan-cpan-author:       SHLOMIF
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perl extension XML::LibXSLT.
 
+1.71            Sat Sep 10 20:38:23 IDT 2011
+    - Fixed https://rt.cpan.org/Ticket/Display.html?id=50487 :
+        - add a blacklist for libxslt-1.1.25 which has a deadlock that
+        hangs a test.
+    - Fixed https://rt.cpan.org/Ticket/Display.html?id=52422 :
+        - Unexpected webserver dependency in test
+    - Updated the version control instructions in the README to bitbucket.org.
+
 1.70
      - fixed various bugs
      - documentation updates
