--- a/Changes
+++ b/Changes
@@ -1,5 +1,29 @@
 Revision history for Perl extension XML::LibXSLT.
 
+1.74            Tue Oct 25 21:48:48 IST 2011
+    - Convert the following test scripts from Test.pm to Test::More :
+        - t/01basic.t
+        - t/02dromeds.t
+        - t/04params.t
+        - t/05quick.t
+        - t/06output.t
+        - t/06entities.t
+        - t/07blankdoc.t
+        - t/08literal.t
+        - t/09exslt.t
+        - t/10functions.t
+        - t/11utf8.t
+        - t/12import.t
+        - t/13error.t
+        - t/14security.t
+        - t/15misc.t
+
+    - In the process made "Encode" and perl-5.8.1. pre-requisites of this
+    distribution.
+
+    - Add the "make runtest" and "make distruntest" targets to test using
+    Test-Run.
+
 1.73            Sun Oct  9 17:32:30 IST 2011
     - Possible fix for https://rt.cpan.org/Ticket/Display.html?id=71456 :
         - made the port reservation on t/14security.t for the non-existent
