--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension XML::LibXSLT.
 
+1.77            Sat Feb 25 16:23:57 IST 2012
+    - Apply a patch from Michael Ludwig clarifying the quoting of string
+    parameters to the XSLT transformation.
+        - Thanks, Michael!
+
 1.76            Thu Jan 12 19:15:03 IST 2012
     - Made LibXSLT.xs compile with C compilers that don't accept declarations
     inside blocks:
